--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,16 +14,17 @@ categories = ["api-bindings", "no-std"]
 [features]
 default = ['std']
 thread = ['std']
+regex = ['dep:regex']
 vendored = ['lua-src']
-std = ['c_str_macro', 'bitflags', 'corepack/std']
+std = ['bitflags', 'corepack/std']
 
 [dependencies]
-cfg-if = '1.0'
+cty = '0.2'
 glob = '0.3'
 derive_more = '0.99.11'
+regex = {version = '1.5', optional = true}
 bitflags = {version = '1.3.2', optional = true}
 libc = {version = '0.2', default-features = false}
-c_str_macro = {version = '1.0.2', optional = true}
 serde = {version = '1.0', default-features = false, features = ['rc', 'derive']}
 corepack = {version = '0.4.1', default-features = false, features = ['alloc']}
 cstrptr = {version = '0.1.2', default-features = false, features = ['alloc']}
