--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,9 @@ categories = ["api-bindings", "no-std"]
 
 [features]
 default = ['std']
-thread = ['std']
+vendored = []
 regex = ['dep:regex']
-vendored = ['lua-src']
+thread = ['std', 'parking_lot']
 std = ['bitflags', 'corepack/std']
 
 [dependencies]
@@ -24,10 +24,11 @@ glob = '0.3'
 derive_more = '0.99.11'
 regex = {version = '1.5', optional = true}
 bitflags = {version = '1.3.2', optional = true}
+parking_lot = {version = '0.12', optional = true}
 libc = {version = '0.2', default-features = false}
 serde = {version = '1.0', default-features = false, features = ['rc', 'derive']}
 corepack = {version = '0.4.1', default-features = false, features = ['alloc']}
 cstrptr = {version = '0.1.2', default-features = false, features = ['alloc']}
 
 [build-dependencies]
-lua-src = {version = '544.0', features = [], optional = true}
+cc = '1'
