--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ std = ['bitflags', 'corepack/std']
 [dependencies]
 cty = '0.2'
 glob = '0.3'
+defer-lite = '1'
 derive_more = '0.99'
 regex = {version = '1.5', optional = true}
 bitflags = {version = '1.3', optional = true}
