--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ cty = '0.2'
 glob = '0.3'
 defer-lite = '1'
 derive_more = '0.99'
+serde_bytes = '0.11'
 regex = {version = '1.5', optional = true}
 bitflags = {version = '1.3', optional = true}
 parking_lot = {version = '0.12', optional = true}
