--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ categories = ["api-bindings", "no-std"]
 default = ['std']
 vendored = []
 thread = ['std', 'parking_lot']
-std = ['bitflags', 'corepack/std']
+std = ['bitflags']
 
 [dependencies]
 cty = '0.2'
@@ -23,12 +23,12 @@ glob = '0.3'
 defer-lite = '1'
 derive_more = '0.99'
 serde_bytes = '0.11'
+serde-transcode = '1'
 regex = {version = '1.5', optional = true}
 bitflags = {version = '1.3', optional = true}
 parking_lot = {version = '0.12', optional = true}
 libc = {version = '0.2', default-features = false}
 serde = {version = '1.0', default-features = false, features = ['rc', 'derive']}
-corepack = {version = '0.4', default-features = false, features = ['alloc']}
 cstrptr = {version = '0.1.2', default-features = false, features = ['alloc']}
 
 [dev-dependencies]
